# SabanaHack

./: .gitignore  README.md  main.py  pyproject.toml
dataLoader/: ExcelLoader.py  excel_loader.py
findings/: Nodule.py  StudyFindings.py
sources/: data.xlsx
wordBank/: findings.py
