[tool.poetry]
name = "sabanahack"
version = "0.1.0"
description = ""
authors = ["Gvln <santis.paez2414@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
